# QuantLab_data_pipeline

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: default.yaml  wrds_field_map.yml
notebooks/: data_handler_demo.ipynb  demo_data_handler.py
reference/: field_manifest.csv  wrds_field_map.yml
src/data_pipeline/: __init__.py  config.py  data_handler.py  ingest_example_data.py  interfaces.py  local_parquet_handler.py
src/data_pipeline/ingestion/: __init__.py  example_data.py  wrds_ingestion.py
src/data_pipeline/storage/: __init__.py  parquet.py
src/infra/: data_handler.py
tests/: test_config.py  test_local_parquet_data_handler.py
