[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlab_data_pipeline"
version = "0.0.1"
description = "Data pipeline and unified access layer for equity datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "QuantLab Team" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "yfinance>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
wrds = ["wrds>=3.1"]