[project]
name = "quantlab_factor_library"
version = "0.1.0"
description = "Cross-sectional equity factor library built on quantlab_data_pipeline"
authors = [{name = "QuantLab", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "pyarrow>=12.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["factor_library*"]

[tool.setuptools.package-data]
quantlab_factor_library = ["config/*.yml", "factor_metadata/**/*.yaml"]
